;;;; -*- coding: utf-8; -*-
changes in sbcl-0.9.4 relative to sbcl-0.9.3:
  * optimizations: REMOVE-DUPLICATES now runs in linear time on
    lists in some cases.  This partially fixes bug 384.

changes in sbcl-0.9.3 relative to sbcl-0.9.2:
  * New feature: Experimental support for bivalent streams: streams
    opened with :element-type :default now allow character and binary
    (unsigned-byte 8) I/O
  * Support for the koi8-r external format.  (thanks to Ivan Boldyrev)
  * Bug fix: OPEN no longer fails when *PRINT-READABLY* is T. (thanks
    to Zach Beane)
  * bug fix: no more highly sporadic "couldn't check whether ~S is
    readable" when reading a stream and an interrupt hits in the middle
    of a select system call
  * compiler better recognizes complex arrays (reported by Eduardo
    Muñoz)
  * bug fix: out-of-line SB-SYS:FOREIGN-SYMBOL-ADDRESS did not work
    for variables on SBCL built with linkage-tables. (reported by Luis
    Oliveira)
  * various error reporting improvements.
  * optimizations: LOGNOR on fixnums is improved in the MIPS backend.
    (Thanks to Thiemo Seufer)
  * bug fix: nested reader invokations work correctly
  * bug fix: it is possible to have simultaneous references to foreign
    code and foreign data with the same name.
  * threads
    ** added x86-64 support
    ** incompatible change: the threading api now works with thread
       objects instead of thread ids
    ** bug fix: threads are protected from signals and interruption when
       starting up or going down
    ** bug fix: a race where an exiting thread could lose its stack to gc
    ** bug fix: don't halt on infinite error in threads if possible
    ** fixed numerous gc deadlocks introduced in the pthread merge
    ** bug fix: fixed thread safety issues in read and print
    ** bug fix: debugger doesn't hang on session lock if interrupted at
       an inappropriate moment
    ** bug fix: run-program is now thread safe(r)